correzione img su mobile, slider da destra su desktop, piccole correzioni

--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,7 @@
 :root {
   --color-primary: #FF8243;
   --color-primary-rgb: 255,130,67;
-  --color-primary-contrast: #000000;
+  --color-primary-contrast: #34302d;
   --color-primary-contrast-rgb: 0,0,0;
   --color-primary-shade: #e0723b;
   --color-primary-tint: #ff8f56;
