--- a/src/views/Landing.css
+++ b/src/views/Landing.css
@@ -148,9 +148,10 @@ h4, h5, small {
 }
 
 #logo-sanpaolo {
-  height: 4rem;
+  height: 8rem;
   width: 100%;
 }
+
 #logo-sanpaolo img {
   max-height: 100%;
   max-width: 100%;
@@ -178,6 +179,12 @@ h4, h5, small {
 }
 
 @media only screen and (max-width: 600px) {
+
+  .App {
+    overflow: scroll;
+    padding: 5rem 0;
+  }
+
   .App-header {
     display: none;
   }
@@ -192,5 +199,10 @@ h4, h5, small {
 
   #sponsors {
     margin: 1.5rem auto 0;
+    flex-direction: column;
+  }
+
+  #logo-sanpaolo {
+    margin-bottom: 2rem;
   }
 }
